<resources>
    <string name="app_name">旅鸽商户端</string>
    <string name="login_username">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_submit">登录</string>
    <string name="company_name">河南旅鸽科技有限公司</string>
    <string name="forget_password">忘记密码?</string>
    <string name="toolbar_title_forget_password">忘记密码</string>
    <string name="QR_description">二维码</string>
    <string name="scanner">扫一扫</string>
    <string name="resister_inputnumber">请输入您的手机号</string>
    <string name="resister_inputbutton">获取验证码</string>
    <string name="menu_personal">个人资料</string>
    <string name="menu_staff_info">员工资料</string>
    <string name="menu_authority">权限设置</string>
    <string name="menu_push_notice">推送设置</string>
    <string name="menu_print_setting">打印机设置</string>
    <string name="menu_exit">退出登陆</string>
    <string name="title_home">主页</string>
    <string name="title_client">客户</string>
    <string name="title_order">订单</string>
    <string name="title_My">我的</string>
    <string name="main_page_message">消息</string>
    <string name="please_enter_validation">请输入验证码</string>
    <string name="please_enter_storename">请输入商铺名称</string>
    <string name="zxing_msg_default_status">将二维码放入方框内，即可自动读取</string>
    <string name="validation_type_scan_QR">扫码校验</string>
    <string name="validation_type_scan_QR_result">二维码扫码</string>
    <string name="validation_type_scan_QR_result_success">恭喜！二维码扫码已成功</string>
    <string name="validation_type_scan_QR_result_fail">抱歉！二维码扫码失败</string>
    <string name="validation_type_scan_QR_re_validation">重新认证</string>
    <string name="Manual_input_qr_code">手动输入</string>
    <string name="validation_history">验证历史</string>
    <string name="refund_after_sale">退款售后</string>
    <string name="pending_send_goods">代发货</string>
    <string name="shop_management">店铺管理</string>
    <string name="shop_management_phonenumber">联系电话</string>
    <string name="commodity_management">商品管理</string>
    <string name="financial_management">财务管理</string>
    <string name="car_data_management">车数据</string>
    <string name="royalty_management">提成管理</string>
    <string name="evaluation_management">评价管理</string>
    <string name="fence_management">围栏管理</string>
    <string name="my_4s_management">我的4S店</string>
    <string name="performance_analysis_management">业绩分析</string>
    <string name="coupon">优惠券</string>
    <string name="commodity_onsale">出售中</string>
    <string name="title_activity_my4s_management">My4sManagementActivity</string>
    <string name="please_enter_shop_name">请输入店铺名称</string>
    <string name="shop_authentication">店铺认证</string>
    <string name="shop_authentication_help">认证帮助</string>
    <string name="non_shop_authentication">未申请店铺认证</string>
    <string name="shop_management_phonenumber_tips">请输入店铺电话，方便客户及时与店家联系</string>
    <string name="please_enter_shop_phonenumber">请输入11位电话号码</string>
    <string name="shop_address">店铺地址</string>
    <string name="shop_address_default">地址未设置</string>
    <string name="shop_image">店铺图片</string>
    <string name="shop_image_default">未设置</string>
    <string name="shop_deposit">店铺保证金</string>
    <string name="shop_deposit_default">未开通</string>
    <string name="shop_consume_back">未消费随便退</string>
    <string name="shop_consume_default_back">不支持</string>
    <string name="shop_contact">联系电话</string>
    <string name="shop_contact_default">未设置</string>
    <string name="shop_return_goods">退货管理</string>
    <string name="shop_return_goods_default">未设置</string>
    <string name="shop_image_main_page">店铺首页</string>
    <string name="shop_image_shop_environment">店铺环境</string>
    <string name="shop_image_shop_other">店铺其他</string>
    <string name="select_shop_image">选取图片</string>
    <string name="take_photo">拍照</string>
    <string name="from_phone_photo">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="support">支持</string>
    <string name="no_support">不支持</string>
    <string name="shop_management_back_address">退货管理</string>
    <string name="shop_back_address_contact_name">请输入联系人</string>
    <string name="shop_back_address_contact_address">请输地址</string>
    <string name="shop_back_address_postcode">请输入邮编</string>
    <string name="shop_back_address_phonenumber">请输入电话</string>
    <string name="company_name_text">公司名称</string>
    <string name="please_enter_company_name_text">请输入公司名称</string>
    <string name="shop_authentication_business_licence">营业执照</string>
    <string name="shop_authentication_identity_card">法人身份证</string>
    <string name="confirm_and_submit">确认并提交</string>
    <string name="confirm_and_submit_hint">预计在3个工作日完成人工审核</string>
    <string name="authentication_submit_success">认证信息已提交</string>
    <string name="authentication_submit_success_description">我们会在3个工作日内审核完成，您也可以访问商家社区寻求帮助！</string>
    <string name="authentication_has_success_description">恭喜！您的店铺认证成功</string>
    <string name="authentication_is_committing_description">认证信息审核中</string>
    <string name="authentication_is_committing">我们会在3个工作日内审核完成，您可以和客户或者当地销售人员练习！</string>
    <string name="authentication_complete">完成</string>
    <string name="authentication_fail">很抱歉，你的店铺认证失败！</string>
    <string name="authentication_fail_description">很抱歉，你的店铺因营业执照/身份证信息无效而认证失败。请重新提供有效原件照，或加盖公章后的有效复印件，再次提交认证申请。</string>
    <string name="authentication_fail_go_modify">更改认证资料</string>
    <string name="shop_deposit_not_get">您尚未开通保证金保障服务</string>
    <string name="shop_deposit_get">缴纳开通</string>
    <string name="shop_deposit_read">我已阅读并同意</string>
    <string name="shop_deposit_argue">《保证金保障服务协议》</string>
    <string name="shop_deposit_argue_1">服务协议</string>
    <string name="what_is_deposit">什么是保证金？</string>
    <string name="what_is_deposit_description">保证金（全称：消费者保障保证金）属于不可用余额，当店铺余额不足时，用于发生订单维权退款时及时佩服给卖家，提升客户消费体验。\n
    *保证金账户目前仅支持店铺余额冻结进行缴纳。缴纳后保证金保障对新订单生效。还请求权的保证金、无双倍返还效力的保证金分别界定，确定各自的法律效力，十分必要。</string>
    <string name="how_get_deposit">如何缴纳保证金？</string>
    <string name="how_get_deposit_description">可通过在线缴费，开通担保金保障，全程消费担保。</string>
    <string name="deposit_advantage">缴纳保证金的好处？</string>
    <string name="deposit_advantage_description_first">·担保交易</string>
    <string name="deposit_advantage_description_second">·全程消费保障</string>
    <string name="deposit_advantage_description_three">·客户更多信任</string>
    <string name="deposit_advantage_description_four">·旅鸽更多流量支持</string>
    <string name="Order_settlement_process">订单结算流程</string>
    <string name="Order_settlement_process_first">01 买家下单</string>
    <string name="Order_settlement_process_second">02 买家支付</string>
    <string name="Order_settlement_process_three">03 商家发货或到店里消费</string>
    <string name="Order_settlement_process_four">04 立即结算</string>
    <string name="main_page_all_clients">全部客户</string>
    <string name="main_page_has_binding_clients">已绑定硬件</string>
    <string name="main_page_has_no_binding_clients">未绑定硬件</string>
    <string name="main_page_has_no_cash_clients">离线/欠费</string>
</resources>