<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PageBackgroundColor"
    android:orientation="vertical"
    tools:context="lvge.com.myapp.modules.shop_management.ShopManageShopDepositActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_shop_deposit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_back"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/mainFontColor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/shop_deposit"
                style="@style/system_title_style" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <!--网络监测-->
    <lvge.com.myapp.ui.NetworkCheckView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainBackgroundColor"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/x98"
                android:gravity="center"
                android:text="@string/shop_deposit_not_get"
                android:textColor="#000"
                android:textSize="@dimen/x36"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_shop_deposit_get"
                style="@style/my_buttonActiveStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x2"
                android:layout_marginLeft="@dimen/x44"
                android:layout_marginRight="@dimen/x44"
                android:layout_marginTop="@dimen/x62"
                android:text="@string/shop_deposit_get"
                android:textSize="@dimen/x36" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >

                <CheckBox
                    android:id="@+id/btn_shop_deposit_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x92"
                    android:paddingLeft="@dimen/x20"
                    android:text="@string/shop_deposit_read"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:id="@+id/shop_deposit_argue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_deposit_argue"
                    android:textColor="#00f" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x80"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x44"
                    android:paddingTop="@dimen/x34"
                    android:text="@string/what_is_deposit"
                    android:textColor="#000"
                    android:textSize="@dimen/x34"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x366"
                    android:layout_marginTop="@dimen/x20"
                    android:background="@color/mainBackgroundColor"
                    android:padding="@dimen/x44"
                    android:text="@string/what_is_deposit_description"
                    android:textColor="#bdbdbd"
                    android:textSize="@dimen/x30" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x72"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/x44"
                    android:text="@string/how_get_deposit"
                    android:textColor="#000"
                    android:textSize="@dimen/x34"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mainBackgroundColor"
                    android:paddingStart="@dimen/x44"
                    android:paddingTop="@dimen/x20"
                    android:text="@string/how_get_deposit_description"
                    android:textColor="#bdbdbd"

                    android:textSize="@dimen/x30"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x72"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/x44"
                    android:text="@string/deposit_advantage"
                    android:textColor="#000"
                    android:textSize="@dimen/x34"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:background="@color/mainBackgroundColor"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/deposit_advantage_description_first"
                            android:textColor="#bdbdbd"
                            android:textSize="@dimen/x30" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/mainBackgroundColor"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/deposit_advantage_description_second"
                            android:textColor="#bdbdbd"
                            android:textSize="@dimen/x30"
                            tools:ignore="InefficientWeight" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"

                            android:background="@color/mainBackgroundColor"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/deposit_advantage_description_three"
                            android:textColor="#bdbdbd"
                            android:textSize="@dimen/x30" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/mainBackgroundColor"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/deposit_advantage_description_four"
                            android:textColor="#bdbdbd"
                            android:textSize="@dimen/x30"
                            tools:ignore="InefficientWeight" />

                    </LinearLayout>
                </LinearLayout>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x72"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/x44"
                    android:text="@string/Order_settlement_process"
                    android:textColor="#000"
                    android:textSize="@dimen/x34"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x20"
                        android:background="@color/mainBackgroundColor"
                        android:paddingLeft="@dimen/x44"
                        android:text="@string/Order_settlement_process_first"
                        android:textColor="#bdbdbd"
                        android:textSize="@dimen/x30"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x20"
                        android:background="@color/mainBackgroundColor"
                        android:paddingLeft="@dimen/x44"
                        android:text="@string/Order_settlement_process_second"
                        android:textColor="#bdbdbd"

                        android:textSize="@dimen/x30"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x32"
                        android:background="@color/mainBackgroundColor"
                        android:paddingLeft="@dimen/x44"
                        android:text="@string/Order_settlement_process_three"
                        android:textColor="#bdbdbd"
                        android:textSize="@dimen/x30"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x20"
                        android:background="@color/mainBackgroundColor"
                        android:paddingLeft="@dimen/x44"
                        android:text="@string/Order_settlement_process_four"
                        android:textColor="#bdbdbd"
                        android:textSize="@dimen/x30"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>