<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lvge.com.myapp.mainFragement.ClientFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_shop_management"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/mainFontColor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/title_client"
                style="@style/system_title_style"/>

            <ImageView
                android:id="@+id/search_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:src="@mipmap/ic_search"
                tools:ignore="ContentDescription" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:tabIndicatorColor="#ff0000"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#ff0000"
        app:tabTextColor="#cccccc">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_page_all_clients" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_page_has_binding_clients" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_page_has_no_binding_clients" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_page_has_no_cash_clients" />

    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:id="@+id/fragment_content_by_clients"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <lvge.com.myapp.ui.LoadListView
            android:id="@+id/clients_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </lvge.com.myapp.ui.LoadListView>

    </LinearLayout>

</LinearLayout>
