<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical"
    tools:context="lvge.com.myapp.modules.shop_management.NotPassAuthenticationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBackgroundColor"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:textColor="#000"
            android:layout_marginTop="@dimen/x98"
            android:layout_marginLeft="@dimen/x58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/text_left_to_img_padding"
            android:drawableStart="@mipmap/shop_manage_authentication_fail"
            android:gravity="center"
            android:text="@string/authentication_fail"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />


        <TextView
            android:textColor="#888"
            android:textSize="@dimen/x26"
            android:layout_marginTop="@dimen/x78"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication_fail_description" />

    </LinearLayout>

    <Button

        android:id="@+id/btn_edit_authentication_information"
        style="@style/my_buttonActiveStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x34"
        android:text="@string/authentication_fail_go_modify" />
</LinearLayout>
