<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical"
    tools:context="lvge.com.myapp.modules.shop_management.ShopManagementActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_shop_back_address"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_back"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/mainFontColor">

            <TextView
                style="@style/system_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/shop_management_back_address" />
            <TextView
                android:id="@+id/shop_finish_back_address"
                style="@style/system_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="end"
                android:paddingRight="@dimen/x20"
                android:text="完成"
                android:textColor="@color/mainFontColor"
                />
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="vertical">


            <EditText
                android:id="@+id/shop_back_address_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/shop_back_address_contact_name"
                android:padding="@dimen/text_left_padding" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/line_background_gray" />
            <EditText
                android:id="@+id/shop_back_address_contact_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/shop_back_address_contact_address"
                android:padding="@dimen/text_left_padding" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/line_background_gray" />
            <EditText
                android:id="@+id/shop_back_address_postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/shop_back_address_postcode"
                android:padding="@dimen/text_left_padding" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/line_background_gray" />
            <EditText
                android:id="@+id/shop_back_address_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/shop_back_address_phonenumber"
                android:padding="@dimen/text_left_padding" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/line_background_gray" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/x20"
                android:text="@string/shop_management_phonenumber_tips"/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>
</LinearLayout>